--- a/src/App.css
+++ b/src/App.css
@@ -113,6 +113,11 @@ img {
   width: 90%;
   margin-bottom: 10px;
 }
+
+#meta {
+  border-radius: 0%;
+  width: 100%;
+}
 /* screens bigger than 700 */
 @media only screen and (min-width: 700px) {
   h2 {
